# celar

./: README.md  todo
client/: README.md  app.py  app.tcss  main.py  pyproject.toml  requirements.txt
client/celar/: __main__.py  celar.tcss
server/: README.md  main.py  requirements.txt
