[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "celar"
version = "0.1.7"
description = "Simple CLI Social Media App"
readme = "README.md"
requires-python = ">=3.9,<4.0"
license = "GPL-3.0-only"
license-files = ["LICENSE"]
authors = [
    {name = "simon0302010", email = "simon0302010@gmail.com"}
]
dependencies = [
    "requests",
    "questionary",
    "textual",
    "textual-image",
    "textual-fspicker",
    "Pillow",
]

classifiers = [
    "Operating System :: POSIX :: Linux",
    "Operating System :: Microsoft :: Windows"
]

[tool.setuptools.package-data]
celar = ["*.tcss"]

[project.urls]
Homepage = "https://github.com/simon0302010/celar"

[project.scripts]
celar = "celar.__main__:main"